# time-series-algorithm-recipes

data/input/: gdp_india.csv
data/output/: model_ar.json  model_ma.json  saved.csv
src/: pyproject.toml
src/tsar/: __init__.py
src/tsar/c01_getting_started/: __init__.py  chapter_01.py  r011a_reading_time_series_objects.py  r011b_reading_time_series_objects.py  r012_saving_time_series_objects.py  r013a_exploring_types_of_time_series_data_univariate.py  r013b_exploring_types_of_time_series_data_multivariate.py  r014a_time_series_components_trends.py  r014b_time_series_components_seasonality.py  r014c_time_series_components_seasonality_contd.py  r015a_time_series_decomposition_additive_model.py  r015b_time_series_decomposition_multiplicative_model.py  r016_visualization_of_seasonality.py  readme.md
src/tsar/c02_statistical_univariate_modeling/: __init__.py  chapter_02.ipynb  chapter_02.py  r021_ma_model.py  r021a_ma_model.py  r022_ar_model.py  r023_arma_model.py
src/tsar/c03_statistical_multivariate_modeling/: chapter_03.py
src/tsar/tsar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/test_c01_getting_started/: test_air_passenger.py  test_chapter_01.py  test_gdp.py  test_r011a_reading_time_series_objects.py  test_r011b_reading_time_series_objects.py  test_r012_saving_time_series_objects.py  test_r013a_exploring_types_of_time_series_data_univariate.py  test_r013b_exploring_types_of_time_series_data_multivariate.py  test_r014a_time_series_components_trends.py  test_r014b_time_series_components_seasonality.py  test_r016_visualization_of_seasonality.py  (+5 more)
(+11 files in other folders)
