[project]
name = "tsar"
version = "0.1.0"
description = "Time Series Algorithms Recipes"
authors = [{ name = "A. R. Kulkarni et al.", email = "bookpermissions@springernature.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "tsar" }

[tool.setuptools.packages.find]
where = ["src"]
